welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:6: error: not found: type stepper
    if (13 <= nbrs[stepper] && nbrs[stepper] <= 19)
                   ^countTeen:6: error: variable nbrs of type List[Int] does not take type parameters.
    if (13 <= nbrs[stepper] && nbrs[stepper] <= 19)
                  ^countTeen:6: error: not found: type stepper
    if (13 <= nbrs[stepper] && nbrs[stepper] <= 19)
                                    ^countTeen:6: error: variable nbrs of type List[Int] does not take type parameters.
    if (13 <= nbrs[stepper] && nbrs[stepper] <= 19)
                                   ^