welcome.lessons.welcome.bat.bool1.CountTeen.scala.code
def countTeen(a:Int, b:Int,c:Int,d:Int): Int = {
  var nbrs = List(a, b, c, d)
  var cpt:Int = 0
  
  for (stepper <- 0 to 3) {
    if (13 <= nbrs[stepper] && nbrs[stepper] <= 19)
    	cpt += 1
  }
  
  return cpt
}